crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__stylex_imports__import_named.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
import { create, createTheme, defineConsts, defineVars, firstThatWorks, keyframes, positionTry, props, viewTransitionClass } from '@stylexjs/stylex';
export const constants = {
    mediaQuery: "@media (min-width: 768px)"
};
export const vars = {
    bar: "var(--x1hi1hmf)",
    __varGroupHash__: "xop34xu"
};
({
    className: "x1qar0u3 x7cint9 x1e2nbdu x14693no x15oojuh xfnndu4 xop34xu"
});
