crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__stylex_imports__import_named_alias.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
import { create as _create, createTheme as _createTheme, defineConsts as _defineConsts, defineVars as _defineVars, firstThatWorks as _firstThatWorks, keyframes as _keyframes, positionTry as _positionTry, props as _props, viewTransitionClass as _viewTransitionClass } from '@stylexjs/stylex';
export const constants = {
    mediaQuery: "@media (min-width: 768px)"
};
export const vars = {
    bar: "var(--x1hi1hmf)",
    __varGroupHash__: "xop34xu"
};
({
    className: "x1qar0u3 x7cint9 x1e2nbdu x14693no x15oojuh xfnndu4 xop34xu"
});
