crates/stylex-transform/tests/transform_import_export_test/snapshots/transform__transform_import_export_test__stylex_imports__import_none.snap
---
source: crates/stylex-transform/tests/transform_import_export_test/stylex_imports.rs
expression: output
---
export const styles = stylex.create({
    root: {
        color: 'red'
    }
});
